2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation
  and enabled again later to view cumulative output
- Checkbutton "Logging of server requests" has moved to main menu
  now concerning Mapsforge tile server requests
  as well as external tile server (TMS) requests
 
2025-08-22

- Modified console again
  to prevent from potential core dump on Linux 

2025-08-20

- Modified console output to avoid console potentially
  freezing and becoming unresponsable to keyboard/mouse
  due to being flooded

2025-06-14

- Added support for Marlin-renderer for JDK17+

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties" 

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely
- Suppressed meaningless SLF4J information output
- Removed work around to remove remaining temporary Tcl folder
  as Tcl bug was fixed in recent Tcl versions.
- Updated README

2025-01-28

- Now showing Tcl/Tk version and script release date in output console
- Updated README hints

2025-01-20

- Improved input handling of number values
- Changed hillshading parameter text to Mapsforge notation
- Added fast adaptive hillshading "adaptasy" (server version >= 0.23.0.1)
- Added optional parameters for minimum and maximum hillshading zoom level
  to allow overriding built-in hillshading zoom levels
  (server version >= 0.23.0.2)

2024-12-31

- Initial commit supporting only new "multiple tasks" server type
- Dropped support of old "single task" server type
- Dropped support of Java version < 11